# Nexa

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
scripts/: cc04bDecay.txt  cc04bDecayCon.txt  getDecayIso.py  getFuelIso.py  getOrigenDecayIso.py  getkeff.py  tbl220.txt  testmcnp.py
src/nexa/: main.py
src/nexa/data/: __init__.py  abundances.py  element.py  elements.py  isotope.py  isotopes.py  lib_endf80.py  lib_endf81.py
src/nexa/globals/: __init__.py  enum.py
src/nexa/interface/: __init__.py  iconstituent.py
src/nexa/material/: __init__.py  constituent.py
src/nexa/mcnp/data/: __init__.py  particles.py  tallybin.py  zaid.py
src/nexa/mcnp/input/: cardCell.py  cardFILL.py  cardLAT.py  cardM.py  cardMT.py  cardMT0.py  cardNONU.py  cardSurface.py  cardTOTNU.py  cardTR.py  cardTRCL.py  cardU.py  cardVOID.py  cardVOL.py
src/nexa/mcnp/output/: __init__.py  mctal.py  output.py  sample.txt  table010.py  table040.py  table050.py  table060.py  table100.py  table101.py  table102.py  table110.py  table126.py  table130.py  table140.py  table175.py  table210.py  table220.py
src/nexa/resources/: tblElmNames.yaml  tblEndf80SaB.yaml  tblEndf81SaB.yaml  tblMCNP6NuclideMass.yaml  tblMcnpParticle.yaml  tblNatIso.yaml  tblSCALENuclideMass.yaml
src/nexa/scale/data/: __init__.py  zaid.py
src/nexa/scale/origen/: __init__.py  getDecayIso.py  getFuelIso.py  origen_parser.py
src/nexa/tools/: getFuelIso.py  getMCNPFlux.py  getMcnpIso.py  getOrigenIso.py  getkeff.py
src/nexa/util/: __init__.py  multi_dim_iterator.py  multi_dim_iterator2.py
